--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Location-based AR.js demo</title>
+    <title>Location-based AR</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
@@ -29,8 +29,16 @@
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="50 50 50"
-        gps-entity-place="latitude: 56.010548; longitude: 38.376351;"
+        gps-entity-place="latitude: 56.010704; longitude: 38.377878;"
       ></a-text>
+
+
+      <a-entity gltf-model="./assets/scene.gltf" 
+        rotation="0 180 0" scale="1 1 1" 
+        gps-entity-place="latitude: 56.010704; longitude: 38.377878; " 
+        animation-mixer/>
+
+
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
