--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
       ></a-text>
 
 
+        <!-- береговая-->
       <a-entity gltf-model="./assets/scene.gltf" 
-        rotation="0 180 0" scale="1 1 1" 
-        gps-entity-place="latitude: 56.010704; longitude: 38.377878; " 
+        rotation="0 180 0" scale="5 5 5" 
+        gps-entity-place="latitude: 55.999431; longitude: 38.375127; " 
         animation-mixer/>
+
+        <!--около круга-->
+        <a-entity gltf-model="./assets/scene.gltf" 
+        rotation="0 180 0" scale="10 10 10" 
+        gps-entity-place="latitude:56.007202; longitude: 38.373844; " 
+        animation-mixer/>
+
+
+      
 
 
       <a-camera gps-camera rotation-reader> </a-camera>
