--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
 
         <!-- береговая-->
       <a-entity gltf-model="./assets/scene.gltf" 
-        rotation="0 180 0" scale="5 5 5" 
-        gps-entity-place="latitude: 55.999431; longitude: 38.375127; " 
-        animation-mixer/>
+        rotation="0 180 0" scale="50 50 50" 
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;"  />
 
-        <!--около круга-->
-        <a-entity gltf-model="./assets/scene.gltf" 
+        <a-entity gltf-model="./assets/Murens_test.gltf" 
         rotation="0 180 0" scale="10 10 10" 
-        gps-entity-place="latitude:56.007202; longitude: 38.373844; " 
-        animation-mixer/>
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="0 40 0"  />
 
-
+      <a-box width="3" material="color: yellow" gps-entity-place="latitude: 55.999617; longitude: 38.374859" position="0 30 0"/>
       
 
 
-      <a-camera gps-camera rotation-reader> </a-camera>
+      <a-camera gps-camera rotation-reader alert="true"
+      simulateLatitude="55.999290" simulateLongitude="38.375274"> </a-camera>
+
     </a-scene>
   </body>
 </html>
