--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 
         <!-- береговая-->
-      <a-entity gltf-model="./assets/scene.gltf" 
+      <!-- <a-entity gltf-model="./assets/scene.gltf" 
         rotation="0 180 0" scale="50 50 50" 
-        gps-entity-place="latitude: 55.999617; longitude: 38.374859;"  />
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;"  /> -->
 
         <a-entity gltf-model="./assets/Murens_test.gltf" 
         rotation="0 180 0" scale="10 10 10" 
-        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="0 40 0"  />
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="0 40 0"  animation-mixer />
 
       <a-box width="3" material="color: yellow" gps-entity-place="latitude: 55.999617; longitude: 38.374859" position="0 30 0"/>
       
