--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
   </head>
 
   <body style="margin: 0; overflow: hidden;">
@@ -25,12 +26,11 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-      <a-text
+      <!-- <a-text
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="50 50 50"
-        gps-entity-place="latitude: 56.010704; longitude: 38.377878;"
-      ></a-text>
+      ></a-text> -->
 
 
         <!-- береговая-->
@@ -38,16 +38,16 @@
         rotation="0 180 0" scale="50 50 50" 
         gps-entity-place="latitude: 55.999617; longitude: 38.374859;"  /> -->
 
-        <a-entity gltf-model="./assets/Murens_test.gltf" 
-        rotation="0 180 0" scale="10 10 10" 
-        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="0 40 0"  animation-mixer />
+        <a-entity gltf-model="./assets/Murens_test.gltf" scale="10 10 10" 
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="10 10 10"  animation-mixer />
 
-      <a-box width="3" material="color: yellow" gps-entity-place="latitude: 55.999617; longitude: 38.374859" position="0 30 0"/>
+      <a-box material="color: yellow" gps-entity-place="latitude: 55.999617; longitude: 38.374859" position="0 30 0"/>
       
 
 
-      <a-camera gps-camera rotation-reader alert="true"
-      simulateLatitude="55.999290" simulateLongitude="38.375274"> </a-camera>
+      <a-camera gps-camera rotation-reader alert="true"> </a-camera>
+
+      <!-- simulateLatitude="55.999290" simulateLongitude="38.375274" -->
 
     </a-scene>
   </body>
