--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         rotation="0 180 0" scale="50 50 50" 
         gps-entity-place="latitude: 55.999617; longitude: 38.374859;"  /> -->
 
-        <a-entity gltf-model="./assets/Murens_test.gltf" scale="10 10 10" 
-        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="10 10 10"  animation-mixer />
+        <a-entity gltf-model="./assets/Murens_test.gltf" scale="5 5 5" 
+        gps-entity-place="latitude: 55.999617; longitude: 38.374859;" position="0 0 0"  animation-mixer="loop:repeat" />
 
       <a-box material="color: yellow" gps-entity-place="latitude: 55.999617; longitude: 38.374859" position="0 30 0"/>
       
 
 
-      <a-camera gps-camera rotation-reader alert="true"> </a-camera>
+      <a-camera gps-camera rotation-reader simulateLatitude="55.999290" simulateLongitude="38.375274"> </a-camera>
 
       <!-- simulateLatitude="55.999290" simulateLongitude="38.375274" -->
 
